err/prefs-n-perms.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anyjson'...
Listing './lib/python3.5/site-packages/anyjson-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/hiredis'...
Listing './lib/python3.5/site-packages/hiredis-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prefs_n_perms'...
Listing './lib/python3.5/site-packages/prefs_n_perms/management'...
Listing './lib/python3.5/site-packages/prefs_n_perms/management/commands'...
Listing './lib/python3.5/site-packages/prefs_n_perms-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/redish'...
Compiling './lib/python3.5/site-packages/redish/client.py'...
***   File "./lib/python3.5/site-packages/redish/client.py", line 139
    except ResponseError, exc:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redish/tests'...
Compiling './lib/python3.5/site-packages/redish/types.py'...
***   File "./lib/python3.5/site-packages/redish/types.py", line 39
    except ResponseError, exc:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redish-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/test_app'...
Listing './share'...
Listing './share/python-wheels'...
